--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -39,3 +39,13 @@ div#forgot-password-button-container {
 	color: white;
 	transition: 0.4s;
 }
+
+div#mail-flash-message {
+	margin-left: 660px;
+	margin-top: 10px;
+	border: 1px solid #999;
+	width: 300px;
+	height: 30px;
+	padding: 5px;
+	border-left: 5px solid limegreen;
+}
